Index Page Spacing styles fixed

--- a/css/featured.css
+++ b/css/featured.css
@@ -1,5 +1,8 @@
 #featured {
     width: 100%;
+    font-family: Quicksand;
+    font-weight: 700;
+    
 }
 
 #featured h2 {
@@ -33,30 +36,34 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 auto;
-    margin-top: 0.5rem;
+    margin-top: 1rem;
+    margin-bottom: 0.4rem;
     color: var(--cream);
     border-radius: 1rem;
     border: 0.2rem solid var(--deep-bronze);
+    
 }
 
 #view-all-dogs:hover,
 #view-all-cats:hover,
 #view-all-products:hover {
     cursor: pointer;
+    background-color: hsl(36, 35%, 56%);
 }
 
 .featured-container {
     width: 100%;
-    padding: 0.5rem 0;
+    padding-bottom: 0.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
 
 .featured-container h2 {
     text-align: center;
-    margin-bottom: 1rem;
+    margin-bottom: 0.8rem;
+    margin-top: 0.6rem;
 }
 
 .featured-container .inner-container {
@@ -66,6 +73,8 @@
     justify-content: center;
     gap: 1.5rem;
 }
+
+
 
 .featured-element {
     background-color: var(--pale-cream);
