--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -90,6 +90,9 @@
         background-color 0.2s ease;
 
     flex-shrink: 0;
+
+    font-family: Quicksand;
+    font-weight: 800;
 }
 
 #adopt-pet img{
